--- a/src/style/index.css
+++ b/src/style/index.css
@@ -23,3 +23,18 @@
     min-height: 100vh;
     overflow: auto;
 }
+
+
+    body::-webkit-scrollbar {
+        width: 1rem;
+    }
+
+    body::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    }
+
+    body::-webkit-scrollbar-thumb {
+        background-color: darkgrey;
+        outline: 1px solid slategrey;
+    }
+
