--- a/src/style/index.css
+++ b/src/style/index.css
@@ -26,12 +26,12 @@
 
 body::-webkit-scrollbar,
 .scroll::-webkit-scrollbar {
-    width: 1rem;
+    width: 8px;
 }
 
 body::-webkit-scrollbar-track,
 .scroll::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.2);
     border-radius: 9999px;
 }
 
@@ -40,5 +40,3 @@ body::-webkit-scrollbar-thumb,
     background-color: #00000080;
     border-radius: 9999px;
 }
-
-
